syntax = "proto3";

package meridian.cluster.v010;

service Communications {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

message AppendEntriesRequest {
  uint32 term = 1;
  string leader_id = 2;
  uint32 prev_log_index = 3;
  uint32 prev_log_term = 4;
  repeated string entries = 5;
  uint32 leader_commit = 6;
}

message AppendEntriesResponse {
  uint32 term = 1;
  string success = 2;
}

message InstallSnapshotRequest {
  uint32 term = 1;
  string leader_id = 2;
  uint32 last_included_index = 3;
  uint32 last_included_term = 4;
  bytes offset = 5;
  bytes data = 6;
  string done = 7;
}

message InstallSnapshotResponse {
  uint32 term = 1;
}

message RequestVoteRequest {
  uint32 term = 1;
  string candidate_id = 2;
  uint32 last_log_index = 3;
  uint32 last_log_term = 4;
}

message RequestVoteResponse {
  uint32 term = 1;
  string vote_granted = 2;
}
